sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:5: error: missing arguments for method echange in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
while (ecart > 1 || echange == true) {
                    ^